@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,13 +12,15 @@
  */
 package org.openhab.binding.dsmr.internal;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.concurrent.atomic.AtomicReference;
 
-import org.apache.commons.io.IOUtils;
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram.TelegramState;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1TelegramParser;
@@ -28,6 +30,7 @@ import org.openhab.binding.dsmr.internal.device.p1telegram.P1TelegramParser;
  *
  * @author Hilbrand Bouwkamp - Initial contribution
  */
+@NonNullByDefault
 public final class TelegramReaderUtil {
     private static final String TELEGRAM_EXT = ".telegram";
 
@@ -43,8 +46,11 @@ public final class TelegramReaderUtil {
      */
     public static byte[] readRawTelegram(String telegramName) {
         try (InputStream is = TelegramReaderUtil.class.getResourceAsStream(telegramName + TELEGRAM_EXT)) {
-            return IOUtils.toByteArray(is);
-        } catch (IOException e) {
+            if (is == null) {
+                fail("Could not find telegram file with name:" + telegramName + TELEGRAM_EXT);
+            }
+            return is.readAllBytes();
+        } catch (final IOException e) {
             throw new AssertionError("IOException reading telegram data: ", e);
         }
     }
@@ -57,9 +63,9 @@ public final class TelegramReaderUtil {
      * @return a P1Telegram object
      */
     public static P1Telegram readTelegram(String telegramName, TelegramState expectedTelegramState) {
-        AtomicReference<P1Telegram> p1Telegram = new AtomicReference<>();
-        byte[] telegram = readRawTelegram(telegramName);
-        P1TelegramParser parser = new P1TelegramParser(p1Telegram::set);
+        final AtomicReference<P1Telegram> p1Telegram = new AtomicReference<>();
+        final byte[] telegram = readRawTelegram(telegramName);
+        final P1TelegramParser parser = new P1TelegramParser(p1Telegram::set, true);
 
         parser.setLenientMode(true);
         parser.parse(telegram, telegram.length);
