@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,12 +12,19 @@
  */
 package org.openhab.binding.tr064.internal;
 
-import static org.openhab.binding.tr064.internal.Tr064BindingConstants.THING_TYPE_FRITZBOX;
-import static org.openhab.binding.tr064.internal.Tr064BindingConstants.THING_TYPE_GENERIC;
+import static org.openhab.binding.tr064.internal.Tr064BindingConstants.*;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.*;
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -38,14 +45,21 @@ import org.openhab.binding.tr064.internal.dto.scpd.root.SCPDDeviceType;
 import org.openhab.binding.tr064.internal.dto.scpd.root.SCPDServiceType;
 import org.openhab.binding.tr064.internal.dto.scpd.service.SCPDActionType;
 import org.openhab.binding.tr064.internal.phonebook.Phonebook;
+import org.openhab.binding.tr064.internal.phonebook.PhonebookActions;
 import org.openhab.binding.tr064.internal.phonebook.PhonebookProvider;
 import org.openhab.binding.tr064.internal.phonebook.Tr064PhonebookImpl;
 import org.openhab.binding.tr064.internal.soap.SOAPConnector;
+import org.openhab.binding.tr064.internal.soap.SOAPRequest;
 import org.openhab.binding.tr064.internal.soap.SOAPValueConverter;
 import org.openhab.binding.tr064.internal.util.SCPDUtil;
 import org.openhab.binding.tr064.internal.util.Util;
 import org.openhab.core.cache.ExpiringCacheMap;
-import org.openhab.core.thing.*;
+import org.openhab.core.thing.Bridge;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.binding.BaseBridgeHandler;
 import org.openhab.core.thing.binding.ThingHandlerService;
 import org.openhab.core.thing.binding.builder.ThingBuilder;
@@ -80,8 +94,8 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
 
     private final Map<ChannelUID, Tr064ChannelConfig> channels = new HashMap<>();
     // caching is used to prevent excessive calls to the same action
-    private final ExpiringCacheMap<ChannelUID, State> stateCache = new ExpiringCacheMap<>(2000);
-    private Collection<Phonebook> phonebooks = Collections.emptyList();
+    private final ExpiringCacheMap<ChannelUID, State> stateCache = new ExpiringCacheMap<>(Duration.ofMillis(2000));
+    private Collection<Phonebook> phonebooks = List.of();
 
     private @Nullable ScheduledFuture<?> connectFuture;
     private @Nullable ScheduledFuture<?> pollFuture;
@@ -221,8 +235,8 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
                 this.deviceType = device.getDeviceType();
 
                 // try to get security (https) port
-                SOAPMessage soapResponse = soapConnector.doSOAPRequest(deviceService, "GetSecurityPort",
-                        Collections.emptyMap());
+                SOAPMessage soapResponse = soapConnector
+                        .doSOAPRequest(new SOAPRequest(deviceService, "GetSecurityPort"));
                 if (!soapResponse.getSOAPBody().hasFault()) {
                     SOAPValueConverter soapValueConverter = new SOAPValueConverter(httpClient);
                     soapValueConverter.getStateFromSOAPValue(soapResponse, "NewSecurityPort", null)
@@ -247,8 +261,8 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
                                 "Could not get service definition for 'urn:DeviceInfo-com:serviceId:DeviceInfo1'"))
                         .getActionList().stream().filter(action -> action.getName().equals("GetInfo")).findFirst()
                         .orElseThrow(() -> new SCPDException("Action 'GetInfo' not found"));
-                SOAPMessage soapResponse1 = soapConnector.doSOAPRequest(deviceService, getInfoAction.getName(),
-                        Collections.emptyMap());
+                SOAPMessage soapResponse1 = soapConnector
+                        .doSOAPRequest(new SOAPRequest(deviceService, getInfoAction.getName()));
                 SOAPValueConverter soapValueConverter = new SOAPValueConverter(httpClient);
                 Map<String, String> properties = editProperties();
                 PROPERTY_ARGUMENTS.forEach(argumentName -> getInfoAction.getArgumentList().stream()
@@ -275,7 +289,7 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
      */
     public List<SCPDDeviceType> getAllSubDevices() {
         final SCPDUtil scpdUtil = this.scpdUtil;
-        return (scpdUtil == null) ? Collections.emptyList() : scpdUtil.getAllSubDevices();
+        return (scpdUtil == null) ? List.of() : scpdUtil.getAllSubDevices();
     }
 
     /**
@@ -333,8 +347,8 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
                 .map(phonebookList -> Arrays.stream(phonebookList.toString().split(","))).orElse(Stream.empty())
                 .map(index -> {
                     try {
-                        SOAPMessage soapMessageURL = soapConnector.doSOAPRequest(scpdService, "GetPhonebook",
-                                Map.of("NewPhonebookID", index));
+                        SOAPMessage soapMessageURL = soapConnector.doSOAPRequest(
+                                new SOAPRequest(scpdService, "GetPhonebook", Map.of("NewPhonebookID", index)));
                         return soapValueConverter.getStateFromSOAPValue(soapMessageURL, "NewPhonebookURL", null)
                                 .map(url -> (Phonebook) new Tr064PhonebookImpl(httpClient, url.toString()));
                     } catch (Tr064CommunicationException e) {
@@ -356,12 +370,12 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
 
         phonebooks = scpdService.map(service -> {
             try {
-                return processPhonebookList(
-                        soapConnector.doSOAPRequest(service, "GetPhonebookList", Collections.emptyMap()), service);
+                return processPhonebookList(soapConnector.doSOAPRequest(new SOAPRequest(service, "GetPhonebookList")),
+                        service);
             } catch (Tr064CommunicationException e) {
                 return Collections.<Phonebook> emptyList();
             }
-        }).orElse(Collections.emptyList());
+        }).orElse(List.of());
 
         if (phonebooks.isEmpty()) {
             logger.warn("Could not get phonebooks for thing {}", thing.getUID());
@@ -391,6 +405,6 @@ public class Tr064RootHandler extends BaseBridgeHandler implements PhonebookProv
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Set.of(Tr064DiscoveryService.class);
+        return Set.of(Tr064DiscoveryService.class, PhonebookActions.class);
     }
 }
